# stellar-crowdfund

./: .gitignore  LICENSE  README.md  SUBMISSION.md  deployments.json
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/crowdfund/: Cargo.toml
contracts/crowdfund/src/: lib.rs  test.rs
contracts/crowdfund/test_snapshots/test/: test_claim_before_deadline_errors.1.json  test_claim_goal_not_met_errors.1.json  test_create_campaign.1.json  test_goal_met_marks_successful_and_creator_claims.1.json  test_pledge_after_deadline_errors.1.json  test_pledge_mints_reward_tokens_cross_contract.1.json  test_refund_when_goal_not_met.1.json
contracts/reward_token/: Cargo.toml
contracts/reward_token/src/: lib.rs  test.rs
contracts/reward_token/test_snapshots/test/: test_double_initialize_errors.1.json  test_initialize_sets_metadata.1.json  test_mint_increases_balance_and_supply.1.json  test_mint_invalid_amount_errors.1.json  test_transfer_insufficient_balance_errors.1.json  test_transfer_moves_balance.1.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md
docs/screenshots/: README.md
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  vite-env.d.ts
frontend/src/components/: CampaignCard.tsx  CreateCampaign.tsx  EventFeed.tsx  Header.tsx  Toast.tsx
frontend/src/lib/: config.ts  format.ts  stellar.ts  types.ts  wallet.ts
frontend/src/test/: CampaignCard.test.tsx  format.test.ts
scripts/: deploy.sh
